feat(splash): added splash screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   bloc: ^8.1.4
+  flutter_native_splash: 2.4.0
   flutter:
     sdk: flutter
 
@@ -109,3 +110,20 @@ flutter:
         weight: 200
       - asset: assets/fonts/Mont-Thin-Italic.ttf
         weight: 100
+
+flutter_native_splash:
+  color: "#2451B6"
+  image: assets/logo/khp_logo2.png
+  #branding: assets/dart.png
+
+  android_12:
+
+    image: assets/logo/splash_logo.png
+    color: "#2451B6"
+    icon_background_color: "#2451B6"
+
+
+  android: true
+  ios: true
+
+  #fullscreen: true
