--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   bloc: ^8.1.4
   flutter_native_splash: 2.4.0
+  table_calendar: ^3.1.2
   flutter:
     sdk: flutter
 
@@ -17,6 +18,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^3.0.0
   flutter_launcher_icons: ^0.13.1
+  
 
 
 flutter:
