--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,10 +8,14 @@ environment:
 
 dependencies:
   bloc: ^8.1.4
+  camerawesome: ^2.0.1
   flutter_native_splash: 2.4.0
   table_calendar: ^3.1.2
   flutter:
     sdk: flutter
+  cross_file: ^0.3.4+2
+  better_open_file: ^3.6.5
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
@@ -19,8 +23,6 @@ dev_dependencies:
   flutter_lints: ^3.0.0
   flutter_launcher_icons: ^0.13.1
   
-
-
 flutter:
   uses-material-design: true
 
