--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,10 @@ dependencies:
   better_open_file: ^3.6.5
   path_provider: ^2.1.4
   loading_animation_widget: ^1.2.1
+  google_mlkit_barcode_scanning: ^0.12.0
+  google_mlkit_translation: ^0.11.0
+  google_mlkit_face_detection: ^0.11.0
+  rxdart: ^0.28.0
 
 dev_dependencies:
   flutter_test:
